objects/Case_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>AccommodationGreaterThanTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hidden field.  Automatically set by Case Line Item workflow CaseLineAccommodationGreaterThanTotal based upon the value of check box Accommodation Is Greater Than Total.</description>
        <label>AccommodationGreaterThanTotal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accommodation_Is_Greater_Than_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Your Accommodation Amount is over your Line Total. Please check the box to indicate that this is accurate.</inlineHelpText>
        <label>Accommodation Is Greater Than Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accommodation_Line_Total_Amount__c</fullName>
        <formula>IF(
AND(
NOT(ISBLANK(Adjusted_Unit_Price__c)),
Adjusted_Unit_Price__c &lt;&gt;0),
Adjusted_Unit_Price__c*Accommodation_Quantity__c,
Unit_Price__c*Accommodation_Quantity__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodation Line Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accommodation_Quantity__c</fullName>
        <inlineHelpText>This is the quantity of the item being accommodated. If there is a quantity of 8 and you are accommodating for 3, please enter 3.</inlineHelpText>
        <label>Accommodation Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accommodation_Reason__c</fullName>
        <label>Accommodation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Transfer</fullName>
                </value>
                <value>
                    <fullName>Carrier Caused - HDL</fullName>
                </value>
                <value>
                    <fullName>Carrier Caused - UPS</fullName>
                </value>
                <value>
                    <fullName>Damaged/Defective Product</fullName>
                </value>
                <value>
                    <fullName>Delay - Backorder</fullName>
                </value>
                <value>
                    <fullName>Delay - DC</fullName>
                </value>
                <value>
                    <fullName>Delay - Vendor</fullName>
                </value>
                <value>
                    <fullName>Freight - Canadian Adjustment/Refund</fullName>
                </value>
                <value>
                    <fullName>Freight - Flat Rate Delivery Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Freight Refund</fullName>
                </value>
                <value>
                    <fullName>Freight - US Adjustment/Refund</fullName>
                </value>
                <value>
                    <fullName>Gift Box Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Gift Return</fullName>
                </value>
                <value>
                    <fullName>Mailed in Gift Card</fullName>
                </value>
                <value>
                    <fullName>Manual Charge</fullName>
                </value>
                <value>
                    <fullName>Out Of Policy Return</fullName>
                </value>
                <value>
                    <fullName>Personalization Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Pre-Bill Refund</fullName>
                </value>
                <value>
                    <fullName>Price Match – Sale/Promo</fullName>
                </value>
                <value>
                    <fullName>Refund for GC/SC/Reward MOP</fullName>
                </value>
                <value>
                    <fullName>Reissue System Refund – Incorrect/Cancelled/Did Not Generate</fullName>
                </value>
                <value>
                    <fullName>Tax Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accommodation_Sub_Reason__c</fullName>
        <label>Accommodation Sub-Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjusted_Unit_Price__c</fullName>
        <label>New Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_PO_Number__c</fullName>
        <label>Air PO Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_PO__c</fullName>
        <formula>IF(NOT( ISBLANK(Air_PO_Number__c)),IMAGE(&apos;resource/1457714939000/plane24&apos;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_C_Monogram_Border__c</fullName>
        <label>B&amp;C Monogram Border</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Monogram_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Clipped Corner</fullName>
                </value>
                <value>
                    <fullName>Crown</fullName>
                </value>
                <value>
                    <fullName>Dotted</fullName>
                </value>
                <value>
                    <fullName>Double Circle</fullName>
                </value>
                <value>
                    <fullName>Side Brackets</fullName>
                </value>
                <value>
                    <fullName>Side Dots</fullName>
                </value>
                <value>
                    <fullName>Single Line</fullName>
                </value>
                <value>
                    <fullName>Stamp Circle</fullName>
                </value>
                <value>
                    <fullName>Star</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_C_Monogram_Script__c</fullName>
        <label>B&amp;C Monogram Script</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Monogram_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lowercase Text</fullName>
                </value>
                <value>
                    <fullName>Mixed Case Text</fullName>
                </value>
                <value>
                    <fullName>Single Initial</fullName>
                </value>
                <value>
                    <fullName>Triple Initials</fullName>
                </value>
                <value>
                    <fullName>Triple Monogram</fullName>
                </value>
                <value>
                    <fullName>Upper Case Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baby_Child_Category__c</fullName>
        <label>Baby &amp; Child Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decorative Accessories</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
                <value>
                    <fullName>Textiles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backorder_Quantity__c</fullName>
        <formula>Line_Number__r.Backorder_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backorder Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backorder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the item is not in stock but has a future P.O. date, please check the box and add the Backorder date to the case comments.</inlineHelpText>
        <label>Backorder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Box_Type__c</fullName>
        <label>Box Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baby &amp; Child</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CW_Return_Code__c</fullName>
        <label>CW Return Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_SKU_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CW SKU ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Line Items</relationshipLabel>
        <relationshipName>Case_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation__c</fullName>
        <label>Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Line Items</relationshipLabel>
        <relationshipName>Case_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case_Number__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clarifying_Notes__c</fullName>
        <label>Clarifying Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <label>Collection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complimentary_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, return refund should be issued in the form of a complimentary credit.</inlineHelpText>
        <label>Complimentary Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coordinate_Group__c</fullName>
        <formula>Line_Number__r.Coordinate_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinate Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Available_Date__c</fullName>
        <inlineHelpText>Current availability date at the time the case line was created.</inlineHelpText>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Item__c</fullName>
        <formula>CW_SKU_ID__r.Custom_Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Approval__c</fullName>
        <label>DC Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DC_HDL_Approval__c</fullName>
        <label>DC/HDL Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delay_Notice_Number__c</fullName>
        <inlineHelpText>The availability date change notice number associated with this Case Line Item/Case - see the associated Order Line Item.</inlineHelpText>
        <label>Delay Notice Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Notification_Reason__c</fullName>
        <label>Delay Notification Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days Moved In</fullName>
                </value>
                <value>
                    <fullName>Days Moved Out</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Lines Moved Total</fullName>
                </value>
                <value>
                    <fullName>Order Total</fullName>
                </value>
                <value>
                    <fullName>Special Attention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delay_Notification_Type__c</fullName>
        <label>Delay Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Days Moved In</fullName>
                </value>
                <value>
                    <fullName>Automatic Email</fullName>
                </value>
                <value>
                    <fullName>Manual Email</fullName>
                </value>
                <value>
                    <fullName>Callout</fullName>
                </value>
                <value>
                    <fullName>Special Attention</fullName>
                </value>
                <value>
                    <fullName>Stale Date</fullName>
                </value>
                <value>
                    <fullName>Swatch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_and_Vendor_Detail__c</fullName>
        <formula>Line_Number__r.CW_SKU_ID__r.Department_formula__c &amp; &quot; &quot; &amp; 
Line_Number__r.Vendor_Number__c &amp; &quot; &quot; &amp; Line_Number__r.Vendor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept and Vendor Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Current_Price__c</fullName>
        <formula>CW_SKU_ID__r.Direct_Current_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Landed_Cost__c</fullName>
        <formula>CW_SKU_ID__r.ELC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Landed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Original_Price__c</fullName>
        <formula>CW_SKU_ID__r.Direct_Original_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Original Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distribution_Center__c</fullName>
        <label>Distribution Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baltimore - 98</fullName>
                </value>
                <value>
                    <fullName>Mira Loma - 97</fullName>
                </value>
                <value>
                    <fullName>Dallas - 96</fullName>
                </value>
                <value>
                    <fullName>San Francisco - 95</fullName>
                </value>
                <value>
                    <fullName>Ohio - 89</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distro_Date__c</fullName>
        <label>Distro Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distro_Number__c</fullName>
        <label>Distro Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enter_Code_for_Ship_Via_Change__c</fullName>
        <label>Enter Code for Ship Via Change</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Modify_Order_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Parcel Ground</fullName>
                </value>
                <value>
                    <fullName>2 - 2nd Day</fullName>
                </value>
                <value>
                    <fullName>3 - Next Day</fullName>
                </value>
                <value>
                    <fullName>4 - Truck</fullName>
                </value>
                <value>
                    <fullName>5 - HDL Mid-Tier Delivery</fullName>
                </value>
                <value>
                    <fullName>6 - HDL White Glove Delivery</fullName>
                </value>
                <value>
                    <fullName>7 - GC 2nd Day Air</fullName>
                </value>
                <value>
                    <fullName>8 - GC Next Day Air</fullName>
                </value>
                <value>
                    <fullName>9 - Priority Mail</fullName>
                </value>
                <value>
                    <fullName>10 - Curbside</fullName>
                </value>
                <value>
                    <fullName>99 - Express Bill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_Details__c</fullName>
        <inlineHelpText>Enter specific details on the issue here</inlineHelpText>
        <label>Exception Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exch_Amount__c</fullName>
        <label>Exch Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exch_Cost__c</fullName>
        <label>Exch Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exch_Order_Line_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exch Order Line Number</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The order line number selected must be from the order on the case.</errorMessage>
            <filterItems>
                <field>$Source.Order__c</field>
                <operation>equals</operation>
                <valueField>Order_Line_Items__c.RH_Order_Number__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order_Line_Items__c</referenceTo>
        <relationshipLabel>Case Line Items (Exch Order Line Number)</relationshipLabel>
        <relationshipName>Case_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exch_Price__c</fullName>
        <label>Exch Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exch_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exch Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Line Items (Exch Product)</relationshipLabel>
        <relationshipName>Case_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exch_Quantity__c</fullName>
        <label>Exch Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exch_Unit_Price__c</fullName>
        <label>Exch Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exchange_Amount__c</fullName>
        <inlineHelpText>Sum of the price of the exchange items.</inlineHelpText>
        <label>Exchange Amount</label>
        <summarizedField>Exchange_Item__c.Exchange_Amount__c</summarizedField>
        <summaryForeignKey>Exchange_Item__c.Case_Line_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exchange_Cost__c</fullName>
        <inlineHelpText>Cost of the exchange items to the customer.</inlineHelpText>
        <label>Exchange Cost</label>
        <summarizedField>Exchange_Item__c.Exchange_Cost__c</summarizedField>
        <summaryForeignKey>Exchange_Item__c.Case_Line_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Support__c</fullName>
        <label>External Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Flatworld</fullName>
                </value>
                <value>
                    <fullName>CSC Vendor</fullName>
                    <default>true</default>
                    <label>CSC Vendor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Line_Requested_Percentage__c</fullName>
        <formula>IF( Flat_Rate_Line_Accommodation_Amount__c &gt; 0, 
IF(Accommodation_Line_Total_Amount__c &gt;0,
Flat_Rate_Line_Accommodation_Amount__c / Accommodation_Line_Total_Amount__c,IF(Line_Total__c&gt;0,Flat_Rate_Line_Accommodation_Amount__c/Line_Total__c,NULL)),
Original_Line_Requested_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Line Requested Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flat_Rate_Line_Accommodation_Amount__c</fullName>
        <label>Requested Flat Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INDC_Date__c</fullName>
        <label>INDC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Warehouse_Date__c</fullName>
        <formula>Line_Number__r.In_Warehouse_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Warehouse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Index_Price__c</fullName>
        <label>Index Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Details__c</fullName>
        <label>Inspection Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interim_Update__c</fullName>
        <label>Interim Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Contact Date Communicated</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Ready for Callout</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unapproved</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>Waiting for Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invalid_Reason__c</fullName>
        <label>Invalid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Shipped</fullName>
                </value>
                <value>
                    <fullName>Cannot Monogram</fullName>
                </value>
                <value>
                    <fullName>Invalid Ship Via</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsStaleDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set automatically. If true, this Case Line Item record was created because the associated Order Line Item had a stale (a date in the past) In Warehouse Date field at the time the Case Line Item record was created.</inlineHelpText>
        <label>IsStaleDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Locked__c</fullName>
        <formula>Case_Number__r.Is_Locked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Quantity__c</fullName>
        <label>Issue Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Accommodation_Amount__c</fullName>
        <formula>IF
(
Flat_Rate_Line_Accommodation_Amount__c &gt; 0, Flat_Rate_Line_Accommodation_Amount__c,
IF
(
AND(Adjusted_Unit_Price__c &gt; 0, Accommodation_Quantity__c &gt; 0), (( Unit_Price__c - Adjusted_Unit_Price__c ) * Accommodation_Quantity__c),
IF(Adjusted_Unit_Price__c &gt; 0, ((Unit_Price__c - Adjusted_Unit_Price__c) * Order_Quantity__c),
IF(
AND(Original_Line_Requested_Percentage__c &gt; 0, Accommodation_Line_Total_Amount__c &gt; 0), (Original_Line_Requested_Percentage__c * Accommodation_Line_Total_Amount__c ),
IF(Original_Line_Requested_Percentage__c &gt; 0,Original_Line_Requested_Percentage__c * Line_Total__c, 0)
)
)
)
)</formula>
        <label>Line Item Accommodation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Accommodation_Percentage__c</fullName>
        <description>Do not use</description>
        <inlineHelpText>Typical accommodation amount is 10% of the line item, not the order total.</inlineHelpText>
        <label>Do not use</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Number</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The line number selected must be from the order on the case.</errorMessage>
            <filterItems>
                <field>$Source.Order__c</field>
                <operation>equals</operation>
                <valueField>Order_Line_Items__c.RH_Order_Number__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order_Line_Items__c</referenceTo>
        <relationshipLabel>Case Line Items</relationshipLabel>
        <relationshipName>Case_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Order_Date__c</fullName>
        <label>Line Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Status_Description__c</fullName>
        <formula>Line_Number__r.Line_Status_Description__c</formula>
        <label>Line Status Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modify_Order_Type__c</fullName>
        <label>Modify Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monogram_Color__c</fullName>
        <label>Monogram Color</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Monogram_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Ivory</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Tone-on-Tone</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Charcoal</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Dove</fullName>
                </value>
                <value>
                    <fullName>Dusty Lilac</fullName>
                </value>
                <value>
                    <fullName>Dusty Rose</fullName>
                </value>
                <value>
                    <fullName>Fog</fullName>
                </value>
                <value>
                    <fullName>French Blue</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Lilac</fullName>
                </value>
                <value>
                    <fullName>Mist</fullName>
                </value>
                <value>
                    <fullName>Mocha</fullName>
                </value>
                <value>
                    <fullName>Moss</fullName>
                </value>
                <value>
                    <fullName>Ocean</fullName>
                </value>
                <value>
                    <fullName>Petal</fullName>
                </value>
                <value>
                    <fullName>Silver Mist</fullName>
                </value>
                <value>
                    <fullName>Taupe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>